// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inheritance > inheritance contract A 1`] = `
{
  "args": [],
  "callType": "CALL",
  "called": [
    {
      "callType": "INTERNAL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [
            {
              "callType": "INTERNAL",
              "called": [
                {
                  "callType": "INTERNAL",
                  "called": [],
                  "contractFQN": "test-contracts/inheritance/A.sol:A",
                  "depth": 0,
                  "from": "0x0000000000000000000000000000000000000000",
                  "functionLineEnd": 31,
                  "functionLineStart": 28,
                  "functionName": "_internal2",
                  "functionSource": "test-contracts/inheritance/A.sol",
                  "functionType": "function",
                  "precompile": false,
                  "rawData": "0x",
                  "result": {
                    "isCreate": false,
                    "isError": false,
                    "logs": [],
                    "returnValueRaw": "0x",
                    "type": "FunctionResultEvent",
                  },
                  "to": "0x5fbdb2315678afecb367f032d93f642f64180aa3",
                  "type": "FunctionCallEvent",
                  "value": 0n,
                },
              ],
              "contractFQN": "test-contracts/inheritance/A.sol:A",
              "depth": 0,
              "from": "0x0000000000000000000000000000000000000000",
              "functionLineEnd": 26,
              "functionLineStart": 22,
              "functionName": "_internal1",
              "functionSource": "test-contracts/inheritance/A.sol",
              "functionType": "function",
              "precompile": false,
              "rawData": "0x",
              "result": {
                "isCreate": false,
                "isError": false,
                "logs": [],
                "returnValueRaw": "0x",
                "type": "FunctionResultEvent",
              },
              "to": "0x5fbdb2315678afecb367f032d93f642f64180aa3",
              "type": "FunctionCallEvent",
              "value": 0n,
            },
          ],
          "contractFQN": "test-contracts/inheritance/A.sol:A",
          "depth": 0,
          "from": "0x0000000000000000000000000000000000000000",
          "functionLineEnd": 17,
          "functionLineStart": 14,
          "functionName": "ping",
          "functionSource": "test-contracts/inheritance/base/D.sol",
          "functionType": "function",
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "0x",
            "type": "FunctionResultEvent",
          },
          "to": "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/inheritance/A.sol:A",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionLineEnd": 19,
      "functionLineStart": 15,
      "functionName": "ping",
      "functionSource": "test-contracts/inheritance/mid/B_ED.sol",
      "functionType": "function",
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "0x",
        "type": "FunctionResultEvent",
      },
      "to": "0x5fbdb2315678afecb367f032d93f642f64180aa3",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
    {
      "callType": "INTERNAL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [],
          "contractFQN": "test-contracts/inheritance/A.sol:A",
          "depth": 0,
          "from": "0x0000000000000000000000000000000000000000",
          "functionLineEnd": 31,
          "functionLineStart": 28,
          "functionName": "_internal2",
          "functionSource": "test-contracts/inheritance/A.sol",
          "functionType": "function",
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "0x",
            "type": "FunctionResultEvent",
          },
          "to": "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/inheritance/A.sol:A",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionLineEnd": 26,
      "functionLineStart": 22,
      "functionName": "_internal1",
      "functionSource": "test-contracts/inheritance/A.sol",
      "functionType": "function",
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "0x",
        "type": "FunctionResultEvent",
      },
      "to": "0x5fbdb2315678afecb367f032d93f642f64180aa3",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
  ],
  "contractFQN": "test-contracts/inheritance/A.sol:A",
  "depth": 0,
  "from": "0x0000000000000000000000000000000000000000",
  "functionLineEnd": 20,
  "functionLineStart": 16,
  "functionName": "ping",
  "functionSource": "test-contracts/inheritance/A.sol",
  "functionType": "function",
  "precompile": false,
  "rawData": "0x5c36b186",
  "result": {
    "isCreate": false,
    "isError": false,
    "logs": [
      {
        "args": {
          "contractName": "D",
          "functionName": "ping",
        },
        "contractFQN": "test-contracts/inheritance/A.sol:A",
        "eventName": "Hit",
        "eventSignature": "Hit(string,string)",
        "functionName": "ping",
        "functionType": "function",
        "rawData": [
          "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          [
            "0xfaa871892068083acc6c6d6e595dcec749b37b3730c57e98d480d6d55aac6869",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000008000000000000000000000000000000000000000000000000000000000000000014400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000470696e6700000000000000000000000000000000000000000000000000000000",
        ],
      },
      {
        "args": {
          "contractName": "A",
          "functionName": "_internal2",
        },
        "contractFQN": "test-contracts/inheritance/A.sol:A",
        "eventName": "Hit",
        "eventSignature": "Hit(string,string)",
        "functionName": "ping",
        "functionType": "function",
        "rawData": [
          "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          [
            "0xfaa871892068083acc6c6d6e595dcec749b37b3730c57e98d480d6d55aac6869",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000008000000000000000000000000000000000000000000000000000000000000000014100000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000a5f696e7465726e616c3200000000000000000000000000000000000000000000",
        ],
      },
      {
        "args": {
          "contractName": "A",
          "functionName": "_internal1",
        },
        "contractFQN": "test-contracts/inheritance/A.sol:A",
        "eventName": "Hit",
        "eventSignature": "Hit(string,string)",
        "functionName": "ping",
        "functionType": "function",
        "rawData": [
          "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          [
            "0xfaa871892068083acc6c6d6e595dcec749b37b3730c57e98d480d6d55aac6869",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000008000000000000000000000000000000000000000000000000000000000000000014100000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000a5f696e7465726e616c3100000000000000000000000000000000000000000000",
        ],
      },
      {
        "args": {
          "contractName": "B_ED",
          "functionName": "ping",
        },
        "contractFQN": "test-contracts/inheritance/A.sol:A",
        "eventName": "Hit",
        "eventSignature": "Hit(string,string)",
        "functionName": "ping",
        "functionType": "function",
        "rawData": [
          "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          [
            "0xfaa871892068083acc6c6d6e595dcec749b37b3730c57e98d480d6d55aac6869",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000800000000000000000000000000000000000000000000000000000000000000004425f454400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000470696e6700000000000000000000000000000000000000000000000000000000",
        ],
      },
      {
        "args": {
          "contractName": "A",
          "functionName": "ping",
        },
        "contractFQN": "test-contracts/inheritance/A.sol:A",
        "eventName": "Hit",
        "eventSignature": "Hit(string,string)",
        "functionName": "ping",
        "functionType": "function",
        "rawData": [
          "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          [
            "0xfaa871892068083acc6c6d6e595dcec749b37b3730c57e98d480d6d55aac6869",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000008000000000000000000000000000000000000000000000000000000000000000014100000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000470696e6700000000000000000000000000000000000000000000000000000000",
        ],
      },
      {
        "args": {
          "contractName": "A",
          "functionName": "_internal2",
        },
        "contractFQN": "test-contracts/inheritance/A.sol:A",
        "eventName": "Hit",
        "eventSignature": "Hit(string,string)",
        "functionName": "ping",
        "functionType": "function",
        "rawData": [
          "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          [
            "0xfaa871892068083acc6c6d6e595dcec749b37b3730c57e98d480d6d55aac6869",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000008000000000000000000000000000000000000000000000000000000000000000014100000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000a5f696e7465726e616c3200000000000000000000000000000000000000000000",
        ],
      },
      {
        "args": {
          "contractName": "A",
          "functionName": "_internal1",
        },
        "contractFQN": "test-contracts/inheritance/A.sol:A",
        "eventName": "Hit",
        "eventSignature": "Hit(string,string)",
        "functionName": "ping",
        "functionType": "function",
        "rawData": [
          "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          [
            "0xfaa871892068083acc6c6d6e595dcec749b37b3730c57e98d480d6d55aac6869",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000008000000000000000000000000000000000000000000000000000000000000000014100000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000a5f696e7465726e616c3100000000000000000000000000000000000000000000",
        ],
      },
    ],
    "returnValue": {
      "ok": true,
      "value": "A._internal1",
    },
    "returnValueRaw": "0x0000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000c412e5f696e7465726e616c310000000000000000000000000000000000000000",
    "type": "FunctionResultEvent",
  },
  "to": "0x5fbdb2315678afecb367f032d93f642f64180aa3",
  "type": "FunctionCallEvent",
  "value": 0n,
}
`;

exports[`inheritance > inheritance contract A2 1`] = `
{
  "args": [],
  "callType": "CALL",
  "called": [
    {
      "callType": "INTERNAL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [
            {
              "callType": "INTERNAL",
              "called": [
                {
                  "callType": "INTERNAL",
                  "called": [
                    {
                      "callType": "INTERNAL",
                      "called": [],
                      "contractFQN": "test-contracts/inheritance/A2.sol:A2",
                      "depth": 0,
                      "from": "0x0000000000000000000000000000000000000000",
                      "functionLineEnd": 31,
                      "functionLineStart": 28,
                      "functionName": "_internal2",
                      "functionSource": "test-contracts/inheritance/A2.sol",
                      "functionType": "function",
                      "precompile": false,
                      "rawData": "0x",
                      "result": {
                        "isCreate": false,
                        "isError": false,
                        "logs": [],
                        "returnValueRaw": "0x",
                        "type": "FunctionResultEvent",
                      },
                      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
                      "type": "FunctionCallEvent",
                      "value": 0n,
                    },
                  ],
                  "contractFQN": "test-contracts/inheritance/A2.sol:A2",
                  "depth": 0,
                  "from": "0x0000000000000000000000000000000000000000",
                  "functionLineEnd": 26,
                  "functionLineStart": 22,
                  "functionName": "_internal1",
                  "functionSource": "test-contracts/inheritance/A2.sol",
                  "functionType": "function",
                  "precompile": false,
                  "rawData": "0x",
                  "result": {
                    "isCreate": false,
                    "isError": false,
                    "logs": [],
                    "returnValueRaw": "0x",
                    "type": "FunctionResultEvent",
                  },
                  "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
                  "type": "FunctionCallEvent",
                  "value": 0n,
                },
              ],
              "contractFQN": "test-contracts/inheritance/A2.sol:A2",
              "depth": 0,
              "from": "0x0000000000000000000000000000000000000000",
              "functionLineEnd": 17,
              "functionLineStart": 14,
              "functionName": "ping",
              "functionSource": "test-contracts/inheritance/base/F.sol",
              "functionType": "function",
              "precompile": false,
              "rawData": "0x",
              "result": {
                "isCreate": false,
                "isError": false,
                "logs": [],
                "returnValueRaw": "0x",
                "type": "FunctionResultEvent",
              },
              "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
              "type": "FunctionCallEvent",
              "value": 0n,
            },
          ],
          "contractFQN": "test-contracts/inheritance/A2.sol:A2",
          "depth": 0,
          "from": "0x0000000000000000000000000000000000000000",
          "functionLineEnd": 19,
          "functionLineStart": 15,
          "functionName": "ping",
          "functionSource": "test-contracts/inheritance/mid/C_EF.sol",
          "functionType": "function",
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "0x",
            "type": "FunctionResultEvent",
          },
          "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/inheritance/A2.sol:A2",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionLineEnd": 19,
      "functionLineStart": 15,
      "functionName": "ping",
      "functionSource": "test-contracts/inheritance/mid/B_DE.sol",
      "functionType": "function",
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "0x",
        "type": "FunctionResultEvent",
      },
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
    {
      "callType": "INTERNAL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [],
          "contractFQN": "test-contracts/inheritance/A2.sol:A2",
          "depth": 0,
          "from": "0x0000000000000000000000000000000000000000",
          "functionLineEnd": 31,
          "functionLineStart": 28,
          "functionName": "_internal2",
          "functionSource": "test-contracts/inheritance/A2.sol",
          "functionType": "function",
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "0x",
            "type": "FunctionResultEvent",
          },
          "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/inheritance/A2.sol:A2",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionLineEnd": 26,
      "functionLineStart": 22,
      "functionName": "_internal1",
      "functionSource": "test-contracts/inheritance/A2.sol",
      "functionType": "function",
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "0x",
        "type": "FunctionResultEvent",
      },
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
  ],
  "contractFQN": "test-contracts/inheritance/A2.sol:A2",
  "depth": 0,
  "from": "0x0000000000000000000000000000000000000000",
  "functionLineEnd": 20,
  "functionLineStart": 16,
  "functionName": "ping",
  "functionSource": "test-contracts/inheritance/A2.sol",
  "functionType": "function",
  "precompile": false,
  "rawData": "0x5c36b186",
  "result": {
    "isCreate": false,
    "isError": false,
    "logs": [
      {
        "args": {
          "contractName": "F",
          "functionName": "ping",
        },
        "contractFQN": "test-contracts/inheritance/A2.sol:A2",
        "eventName": "Hit",
        "eventSignature": "Hit(string,string)",
        "functionName": "ping",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xfaa871892068083acc6c6d6e595dcec749b37b3730c57e98d480d6d55aac6869",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000008000000000000000000000000000000000000000000000000000000000000000014600000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000470696e6700000000000000000000000000000000000000000000000000000000",
        ],
      },
      {
        "args": {
          "contractName": "A2",
          "functionName": "_internal2",
        },
        "contractFQN": "test-contracts/inheritance/A2.sol:A2",
        "eventName": "Hit",
        "eventSignature": "Hit(string,string)",
        "functionName": "ping",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xfaa871892068083acc6c6d6e595dcec749b37b3730c57e98d480d6d55aac6869",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000008000000000000000000000000000000000000000000000000000000000000000024132000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000a5f696e7465726e616c3200000000000000000000000000000000000000000000",
        ],
      },
      {
        "args": {
          "contractName": "A2",
          "functionName": "_internal1",
        },
        "contractFQN": "test-contracts/inheritance/A2.sol:A2",
        "eventName": "Hit",
        "eventSignature": "Hit(string,string)",
        "functionName": "ping",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xfaa871892068083acc6c6d6e595dcec749b37b3730c57e98d480d6d55aac6869",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000008000000000000000000000000000000000000000000000000000000000000000024132000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000a5f696e7465726e616c3100000000000000000000000000000000000000000000",
        ],
      },
      {
        "args": {
          "contractName": "C_EF",
          "functionName": "ping",
        },
        "contractFQN": "test-contracts/inheritance/A2.sol:A2",
        "eventName": "Hit",
        "eventSignature": "Hit(string,string)",
        "functionName": "ping",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xfaa871892068083acc6c6d6e595dcec749b37b3730c57e98d480d6d55aac6869",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000800000000000000000000000000000000000000000000000000000000000000004435f454600000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000470696e6700000000000000000000000000000000000000000000000000000000",
        ],
      },
      {
        "args": {
          "contractName": "B_DE",
          "functionName": "ping",
        },
        "contractFQN": "test-contracts/inheritance/A2.sol:A2",
        "eventName": "Hit",
        "eventSignature": "Hit(string,string)",
        "functionName": "ping",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xfaa871892068083acc6c6d6e595dcec749b37b3730c57e98d480d6d55aac6869",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000800000000000000000000000000000000000000000000000000000000000000004425f444500000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000470696e6700000000000000000000000000000000000000000000000000000000",
        ],
      },
      {
        "args": {
          "contractName": "A2",
          "functionName": "ping",
        },
        "contractFQN": "test-contracts/inheritance/A2.sol:A2",
        "eventName": "Hit",
        "eventSignature": "Hit(string,string)",
        "functionName": "ping",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xfaa871892068083acc6c6d6e595dcec749b37b3730c57e98d480d6d55aac6869",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000008000000000000000000000000000000000000000000000000000000000000000024132000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000470696e6700000000000000000000000000000000000000000000000000000000",
        ],
      },
      {
        "args": {
          "contractName": "A2",
          "functionName": "_internal2",
        },
        "contractFQN": "test-contracts/inheritance/A2.sol:A2",
        "eventName": "Hit",
        "eventSignature": "Hit(string,string)",
        "functionName": "ping",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xfaa871892068083acc6c6d6e595dcec749b37b3730c57e98d480d6d55aac6869",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000008000000000000000000000000000000000000000000000000000000000000000024132000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000a5f696e7465726e616c3200000000000000000000000000000000000000000000",
        ],
      },
      {
        "args": {
          "contractName": "A2",
          "functionName": "_internal1",
        },
        "contractFQN": "test-contracts/inheritance/A2.sol:A2",
        "eventName": "Hit",
        "eventSignature": "Hit(string,string)",
        "functionName": "ping",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xfaa871892068083acc6c6d6e595dcec749b37b3730c57e98d480d6d55aac6869",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000008000000000000000000000000000000000000000000000000000000000000000024132000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000a5f696e7465726e616c3100000000000000000000000000000000000000000000",
        ],
      },
    ],
    "returnValue": {
      "ok": true,
      "value": "A2._internal1",
    },
    "returnValueRaw": "0x0000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000d41322e5f696e7465726e616c3100000000000000000000000000000000000000",
    "type": "FunctionResultEvent",
  },
  "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
  "type": "FunctionCallEvent",
  "value": 0n,
}
`;
